--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a class="nav-link" href="https://github.com/gbouldin43" target="_blank">GitHub Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" target="_blank">Source Code</a>
+                    <a class="nav-link" href="https://github.com/gbouldin43/dev-harry-final-project" target="_blank">Source Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" target="_blank">Nu Validator</a>
+                    <a class="nav-link" href="https://validator.nu/?doc=https%3A%2F%2Fgbouldin43.github.io%2Fdev-harry-final-project%2F" target="_blank">Nu Validator</a>
                 </li>
             </ul>
         </div>
